@startuml

title US0012

/'
As a Power User [or Administrator], I want to add an actuator to an existing
device in a room. The actuator must be of a model of an existing type of actuator.
'/

class House {
  - rooms : List<Room>
  + getRoomByName(...) : Room
}
class GetRoomListController {
    - house : House
    - roomMapper : RoomMapper
    + GetRoomListController(...)
    + getRooms(...) : List<RoomDTO>
}

class GetDeviceListController {
    - house : House
    - deviceMapper : DeviceMapper
    + GetDeviceListController(...)
    + getDevices(...) : List<DeviceDTO>
}

class AddActuatorToDeviceController {
    - house : House
    - getRoomListController : getRoomListController
    - getDeviceListController : getDeviceListController
    - actuatorMapper : ActuatorMapper
    - catalogue : Catalogue
    + AddActuatorToDeviceController(...)
    +getRooms() : List<RoomDTO>
    +getDevices() : List<DeviceDTO>
    +getActuatorModels() : List<String>
    +addActuatorToDevice(...) : ActuatorDTO
}

class Catalogue{
    - actuatorClassList : List<String>
    + getActuatorCatalogue : actuatorModels
}

class Room {
- name : String
- devices : List<Device>
+ getDeviceByName(...) : Device
}

class Device {
- name : String
- active : boolean
- actuators : List<Actuator>
- actuatorFactory : ActuatorFactory
+ addActuator(...) : Actuator
}

interface ActuatorFactory {
+ createActuator(...) : Actuator
}

class ActuatorFactoryImp {
- catalogue : Catalogue
+ createActuator(...) : Actuator

}


interface Actuator {
+ getType() : ActuatorType
+ operate(...) : Value
+ getId() : int
+ generateId() : int
}

class ActuatorMapper {
+ actuatorToDTO(...) : ActuatorDTO
}

class ActuatorDTO {
- actuatorId : int
- actuatorType : ActuatorType
+ getActuatorId() : int
+ getActuatorType() : ActuatorType
}

class DeviceDTO {
- name : String
- type : String
- roomName : String
+ getName() : String
+ getType() : String
+ getRoomName() : String
}

Note left of GetRoomListController
    ref : UserStory3.puml for more details
end note

Note right of GetDeviceListController
    ref : UserStory6.puml for more details
end note

AddActuatorToDeviceController .left.> GetRoomListController : uses
AddActuatorToDeviceController .right.> GetDeviceListController : uses
AddActuatorToDeviceController ..> House : uses
House "1" *-left- "*" Room : contains
Room "1" *-- "*" Device : contains
Device "1" *-- "*" Actuator : contains
Device .right.> ActuatorFactory : uses
ActuatorFactory <|- ActuatorFactoryImp : implements
ActuatorFactoryImp ..> Actuator : creates
ActuatorFactoryImp ..> Catalogue : uses
AddActuatorToDeviceController ..> Catalogue : uses
AddActuatorToDeviceController ..> ActuatorMapper : uses
ActuatorMapper ..> ActuatorDTO : creates
AddActuatorToDeviceController ..> DeviceDTO : uses
@enduml